--- a/src/scss/emojiver.scss
+++ b/src/scss/emojiver.scss
@@ -62,6 +62,7 @@
       display: inline-block;
       cursor: pointer;
       width: 36px;
+      height: 36px;
       padding: 6px; 
       text-align: center;
       &.is-active {
