--- a/src/scss/emojiver.scss
+++ b/src/scss/emojiver.scss
@@ -28,7 +28,7 @@
 // emojiver css
 .emojiver {
   display: none;
-  position: absolute;
+  position: fixed;
   min-width: 200px;
   max-width: 370px;
   color: #555459;
@@ -98,7 +98,7 @@
     display: block;
     overflow: hidden;
     border-radius: 6px;
-    padding: .25rem 0 .2rem !important;
+    padding: 5px 0 !important;
     cursor: pointer;
     @include transition(background .05s ease-out);
     &.is-gray {
