--- a/src/scss/emojiver.scss
+++ b/src/scss/emojiver.scss
@@ -579,7 +579,6 @@
   min-width: 200px;
   max-width: 370px;
   color: #555459;
-  overflow: hidden;
   z-index: 9999999999;
   box-shadow: 0 2px 10px rgba(64,54,63,.5);
   font-size: .95rem;
@@ -620,6 +619,34 @@
       width: 17px;
       height: 19px;
       display: inline-block;
+    }
+    &__tooltip {
+      position: absolute;
+      display: inline-block;
+      opacity: 0;
+      &.is-on {
+        opacity: 1;
+      }
+      &Inner {
+        @include border-radius(3px);
+        max-width: 200px;
+        font-size: 11px;
+        color: white;
+        background-color: #4F398F;
+        padding: 2px 4px;
+      }
+      &Arrow {
+        position: absolute;
+        width: 0;
+        height: 0;
+        border-color: rgba(0, 0, 0, 0);
+        border-style: solid;
+        top: 20px;
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px 5px 0;
+        border-top-color: #4F398F;
+      }
     }
   }
   &__content {
