Fix tooltip position bug

--- a/src/scss/emojiver.scss
+++ b/src/scss/emojiver.scss
@@ -601,6 +601,7 @@
   }
   // objects
   &__header {
+    position: relative;
     height: 36px;
     background: #f9fafa;
     padding: 0 14px 0 10px;
