--- a/src/scss/emojiver.scss
+++ b/src/scss/emojiver.scss
@@ -625,6 +625,7 @@
       position: absolute;
       display: inline-block;
       opacity: 0;
+      padding: 5px 0;
       &.is-on {
         opacity: 1;
       }
@@ -642,7 +643,7 @@
         height: 0;
         border-color: rgba(0, 0, 0, 0);
         border-style: solid;
-        top: 20px;
+        bottom: 0;
         left: 50%;
         margin-left: -5px;
         border-width: 5px 5px 0;
